[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/scenes/slimeKing.gd" type="Script" id=1]
[ext_resource path="res://assets/art/png/enemies/slimeKing_spit1.png" type="Texture" id=2]
[ext_resource path="res://assets/art/png/enemies/kingCrown.png" type="Texture" id=3]
[ext_resource path="res://assets/art/png/enemies/slimeKing_normal.png" type="Texture" id=4]
[ext_resource path="res://assets/art/png/enemies/slimeKing_spit3.png" type="Texture" id=5]
[ext_resource path="res://assets/art/png/enemies/slimeKing_normal1.png" type="Texture" id=6]
[ext_resource path="res://assets/art/png/enemies/slimeKing_spit2.png" type="Texture" id=7]
[ext_resource path="res://assets/audio/bfxr_sounds/Randomize4.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/bfxr_sounds/Blip_Select.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/bfxr_sounds/Explosion2.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/audio/bfxr_sounds/Explosion.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": false,
"name": "spit",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 46.0
height = 106.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 34.0
height = 68.0

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, -109 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 100, 100, 100, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "damage"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0999213, 0.150093 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, -109 ), Vector2( 1.5, -109.21 ), Vector2( -2, -109.21 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0501715, 0.100132, 0.150093 ),
"transitions": PoolRealArray( 1, 1e-05, 1, 1e-05 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.00610051, 0.948629 ),
"transitions": PoolRealArray( 0.231705, 7.7275 ),
"update": 0,
"values": [ Vector2( -2, -109.21 ), Vector2( 50, -150 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.951679 ),
"transitions": PoolRealArray( 0.435275, 1 ),
"update": 0,
"values": [ -360.0, 251.1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.210467, 0.945578 ),
"transitions": PoolRealArray( 0.482968, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, -109 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 18, 91 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 105, 44 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 53.0
height = 58.0

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("mainSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mainSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("mainSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "damage"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("mainSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 0.25, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mainSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 0.25, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ), Vector2( 0, -20 ), Vector2( 0, -32 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("mainSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 2.01342e-05, 1e-05, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "dead"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("mainSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mainSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -28.55 ), Vector2( -3, -25.272 ), Vector2( 3, -21.995 ), Vector2( -3, -18.717 ), Vector2( 3, -15.44 ), Vector2( -3, -12.162 ), Vector2( 3, -8.885 ), Vector2( -3, -5.607 ), Vector2( 3, -2.33 ), Vector2( -3, 0.948 ), Vector2( 3, 4.225 ), Vector2( -3, 7.503 ), Vector2( 3, 10.78 ), Vector2( -3, 14.058 ), Vector2( 3, 17.335 ), Vector2( -3, 20.613 ), Vector2( 3, 23.89 ), Vector2( -3, 27.168 ), Vector2( 3, 30.445 ), Vector2( -3, 33.723 ), Vector2( 3, 37 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("mainSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mainSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("mainSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="slimeKing" type="KinematicBody2D"]
collision_layer = 256
collision_mask = 2
script = ExtResource( 1 )

[node name="actionTimer" type="Timer" parent="."]

[node name="delayTimer" type="Timer" parent="."]

[node name="mainSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32 )
frames = SubResource( 1 )
animation = "spit"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, -8 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="crown" type="Area2D" parent="."]
position = Vector2( -2, -6 )
collision_layer = 0
collision_mask = 32
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="Sprite" parent="crown"]
modulate = Color( 100, 100, 100, 1 )
position = Vector2( -2, -109 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="crown"]
position = Vector2( 1, -110 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="crownAnimationPlayer" type="AnimationPlayer" parent="crown"]
anims/RESET = SubResource( 6 )
anims/damage = SubResource( 7 )
anims/death = SubResource( 8 )
anims/default = SubResource( 9 )

[node name="topChecker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="topChecker"]
position = Vector2( 0, -70 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="sideChecker" type="Area2D" parent="."]
collision_layer = 0

[node name="main" type="CollisionShape2D" parent="sideChecker"]
position = Vector2( 0, -7 )
shape = SubResource( 5 )

[node name="firstPhase" type="CollisionShape2D" parent="sideChecker"]
position = Vector2( 0, -96 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="Sightline" type="RayCast2D" parent="."]
position = Vector2( 0, -18 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 450 )

[node name="mainAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/damage = SubResource( 12 )
anims/dead = SubResource( 14 )
anims/default = SubResource( 13 )

[node name="soundProjectile" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0
pitch_scale = 5.0

[node name="soundCrownDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0
pitch_scale = 1.5

[node name="soundDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0
pitch_scale = 3.0

[node name="soundAngery" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
pitch_scale = 1.5

[node name="soundDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
pitch_scale = 0.5

[node name="soundCrownDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
pitch_scale = 3.0

[connection signal="timeout" from="actionTimer" to="." method="_on_actionTimer_timeout"]
[connection signal="timeout" from="delayTimer" to="." method="_on_delayTimer_timeout"]
[connection signal="body_entered" from="crown" to="." method="_on_crown_body_entered"]
[connection signal="body_entered" from="topChecker" to="." method="_on_topChecker_body_entered"]
[connection signal="body_entered" from="sideChecker" to="." method="_on_sideChecker_body_entered"]
[connection signal="animation_finished" from="mainAnimationPlayer" to="." method="_on_mainAnimationPlayer_animation_finished"]
